--- a/static/viz.css
+++ b/static/viz.css
@@ -3,58 +3,59 @@ html {
 }
 
 body {
-  margin-top: 2em;
+  margin: 2em;
 }
 
-.right {
-  float: right;
-  margin-right: 2em;
-}
-
-.current-time {
-  font-family: monospace;
-  font-size: 14px;
-  font-weight: bold;
+#current-time {
+  font: bold 14px monospace;
   color: #a00;
+  text-align: right;
 }
 
-.right img {
+#main {
+  display: flex;
+  flex-direction: row;
+}
+
+.bird {
+  display: flex;
+  flex: initial;
+  flex-direction: column;
+}
+
+.bird img {
   width: 10em;
-  float: right;
   margin-top: 1em;
 }
 
-.graphs {
-  padding-left: 2em;
+#graphs {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
 }
 
 .graph {
-  display: table;
-  padding-bottom: 4px;
-  font-family: monospace;
-  font-size: 14px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 6px;
   height: 24px;
-  line-height: 24px;
-  text-align: center;
-}
-
-.graph-template {
-  display: none;
 }
 
 .graph .value {
-  display: table-cell;
-  width: 70px;
-  vertical-align: middle;
-  text-align: left;
+  width: 7em;
   padding-left: 5px;
-  font-size: 10px;
   color: #966;
+  font: 10px monospace;
+  line-height: 24px;
 }
 
 .graph .name {
-  display: table-cell;
-  vertical-align: middle;
+  font: 14px monospace;
+  line-height: 24px;
   padding-left: 1em;
   color: #a66;
+}
+
+#graph-template {
+  display: none;
 }
